--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -36,7 +36,12 @@ clean-targets:         # directories to be removed by `dbt clean`
 # using the `{{ config(...) }}` macro.
 
 models:
-  my_new_project:
-    # Applies to all files under models/example/
-    example:
-      +materialized: table
+  dq_dbt_test:
+    staging:
+      materialized: incremental
+    integration:
+      materialized: table
+    marts:
+      materialized: incremental
+    dq:
+      materialized: incremental
